relatorios/202112866/T1/compilador.txt
Trabalho1Deivis.cpp:13:34: error: ‘const’ qualifiers cannot be applied to ‘Ponto&’
   13 |     float distancia(Ponto& const p1) const {
      |                                  ^~
